estimating genotype likelihoods are no longer calculated at the time of data
import, but instead are calculated the first time that genotype likelihoods
are calculated.  This is to avoid unnessasary calculation and recalculation
when alleles and taxa are filtered or merged before running genotype calling.
From the user perspective, there isn't any change except faster import.

## Changes in v1.1 ##

A plot method has been added for RADdata objects.

The MergeTaxaDepth, RemoveUngenotypedLoci, and SubsetByPloidy utility functions
have been added.

The Export_MAPpoly and Export_GWASpoly functions have been added.

Bug fixes have been made in TestOverdispersion, VCF2RADdata, SubsetByLocus,
and SubsetByTaxon.

Some code in AddAlleleFreqByTaxa has been translated to Rcpp to speed
computation time for IteratePopStruct and IteratePopStructLD.

## Changes in v1.0 ##

Genotype likelihoods are now estimated under a beta-binomial distribution 
rather than the binomial distribution.  This change was made so that real
sequencing data would be accurately modeled; even in diploid heterozygotes,
read depth of two alleles is often very different from a 1:1 ratio, due to
many underlying issues with sequencing data that would be difficult to model.
Under the beta-binomial with respect to the binomial, there is an increased 
probability of read depth ratios that differ from the true allele copy 
ratio.  In a practical sense, this means reduced certainty in the estimation of
allele copy number from read depth alone, and an increased importance of 
genotype prior probabilities.  The exact shape of the beta-binomial 
distribution is determined by an overdispersion parameter, which the user can
optimize using the TestOverdispersion function.

When using linkage disequilibrium to update genotype priors, the square of
Pearson's correlation coefficient is now used for weighting markers, where
Pearson's correlation coefficient was used previously without being squared.