@@ -7,8 +7,8 @@ AddGenotypePriorProb_Even,
 AddGenotypePriorProb_HWE, AddGenotypePriorProb_LD,
 AddGenotypePriorProb_Mapping2Parents, AddPCA,
 AddPloidyChiSq, AddPloidyLikelihood, AddPriorTimesLikelihood,
-CanDoGetWeightedMeanGeno, EstimateContaminationRate, ExportGAPIT,
-Export_GWASpoly,
+CanDoGetWeightedMeanGeno, EstimateContaminationRate, 
+EstimateParentalGenotypes, ExportGAPIT, Export_GWASpoly,
 Export_MAPpoly, Export_polymapR, Export_rrBLUP_Amat, Export_rrBLUP_GWAS,
 Export_TASSEL_Numeric, GetAlleleNames,
 GetBlankTaxa, GetContamRate, GetDonorParent, GetLikelyGen, 
@@ -51,6 +51,7 @@ S3method(AddPloidyLikelihood, RADdata)
 S3method(AddPriorTimesLikelihood, RADdata)
 S3method(CanDoGetWeightedMeanGeno, RADdata)
 S3method(EstimateContaminationRate, RADdata)
+S3method(EstimateParentalGenotypes, RADdata)
 S3method(GetAlleleNames, RADdata)
 S3method(GetBlankTaxa, RADdata)
 S3method(GetContamRate, RADdata)
